# SGMM-MPI

./: CMakeLists.txt  GMM3D.hpp  KMeans.hpp  README.md  SpatialGMM.hpp  main.cpp  utils.h
